versioned_docs/version-2.8/reference/goals/update-build-files.mdx
---
title: update-build-files
description: |
  Format and fix safe deprecations in BUILD files.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants update-build-files [args]
```

Format and fix safe deprecations in BUILD files.

This does not handle the full Pants upgrade. You must still manually change `pants_version` in `pants.toml` and you may need to manually address some deprecations. See https://www.pantsbuild.org/v2.8/docs/upgrade-tips for upgrade tips.

This goal is run without arguments. It will run over all BUILD files in your project.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[update-build-files]`</span>

<span className={styles.options}>

## Basic options

### `check`

<Option
  cli_repr={`--[no-]update-build-files-check`}
  env_repr='PANTS_UPDATE_BUILD_FILES_CHECK'
  toml_repr={`[update-build-files]
check = <bool>`}
  default_repr={`False`}
>

Do not write changes to disk, only write back what would change. Return code 0 means there would be no changes, and 1 means that there would be.

</Option>

### `fmt`

<Option
  cli_repr={`--[no-]update-build-files-fmt`}
  env_repr='PANTS_UPDATE_BUILD_FILES_FMT'
  toml_repr={`[update-build-files]
fmt = <bool>`}
  default_repr={`True`}
>

Format BUILD files using Black.

Set `[black].args`, `[black].config`, and `[black].config_discovery` to change Black&#x27;s behavior. Set `[black].interpreter_constraints` and `[python].interpreter_search_path` to change which interpreter is used to run Black.

</Option>

### `fix_safe_deprecations`

<Option
  cli_repr={`--[no-]update-build-files-fix-safe-deprecations`}
  env_repr='PANTS_UPDATE_BUILD_FILES_FIX_SAFE_DEPRECATIONS'
  toml_repr={`[update-build-files]
fix_safe_deprecations = <bool>`}
  default_repr={`True`}
>

Automatically fix deprecations, such as target type renames, that are safe because they do not change semantics.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
